# poppel-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in
include/poppel/: poppel.hpp
include/poppel/core/: exceptions.hpp  npy.hpp  operations.hpp  structs.hpp  types.hpp  utilities.hpp
src/: CMakeLists.txt  poppel.cpp
src/core/: npy.hpp  operations.cpp
test/: CMakeLists.txt  main.cpp
test/core/: operations.hpp
